--- a/submit/index.html
+++ b/submit/index.html
@@ -2946,30 +2946,20 @@
       </p>
       <p>
         <b>(i) Schema Type: </b> The tables are distribtued across 17 schema.org types and the tables do no include any metadata which
-        means no table headers or cpations are available. We list in Table X the top 5 labels that reached the highest score in the 
-        overall test set and the top 5 labels that reached the lowest score for both CPA and CTA tasks.
+        means no table headers or cpations are available. We list the top 5 labels that reached the highest score in the 
+        overall test set and the top 5 labels that reached the lowest score for CTA in <i>Table X</i> and CPA in <i>Table Y</i>.
         The performance of CTA and CPA varies across different schema types. 
         <strong>MusicRecording</strong> is the only schema where both tasks perform well, while <strong>CreativeWork and Product</strong>  are weak for both tasks. 
         <strong>Recipe and Person</strong> are among the top 5 schemas for CTA, but are among the lowest 5 for CPA.
  
         <table class="tg">
-          <caption>Table X: Schema Type result for CTA & CPA</caption>
+          <caption>Table X: Schema Type result for CTA</caption>
           <thead>
             <tr>
-              <th class="tg-ixdq" colspan="4">CTA</th>
-              <th class="tg-ixdq" colspan="4">CPA</th>
-          </tr>
-            <tr>
-                <th class="tg-ixdq" colspan="2">Top 5</th>
-                <th class="tg-ixdq" colspan="2">Lowest 5</th>
                 <th class="tg-ixdq" colspan="2">Top 5</th>
                 <th class="tg-ixdq" colspan="2">Lowest 5</th>
             </tr>
             <tr>
-              <th class="tg-mkpc">Label</th>
-              <th class="tg-mkpc">Overall F1</th>
-              <th class="tg-mkpc">Label</th>
-              <th class="tg-mkpc">Overall F1</th>
               <th class="tg-mkpc">Label</th>
               <th class="tg-mkpc">Overall F1</th>
               <th class="tg-mkpc">Label</th>
@@ -2982,46 +2972,74 @@
               <td>96.23</td>
               <td>Product</td>
               <td>86.54</td>
-              <td>Restaurant</td>
-              <td>96.25</td>
-              <td>SportsEvent</td>
-              <td>84.50</td>
             </tr>
             <tr>
               <td>Museum</td>
               <td>95.40</td>
               <td>Hotel</td>
               <td>86.05</td>
-              <td>TVEpisode</td>
-              <td>96.08</td>
-              <td>Recipe</td>
-              <td>82.25</td>
             </tr>
             <tr>
               <td>Event</td>
               <td>93.89</td>
               <td>JobPosting</td>
               <td>84.14</td>
-              <td>MusicRecording</td>
-              <td>94.64</td>
-              <td>Person</td>
-              <td>81.24</td>
             </tr>
             <tr>
               <td>Person</td>
               <td>93.07</td>
               <td>CreativeWork</td>
               <td>82.50</td>
-              <td>Place</td>
-              <td>93.18</td>
-              <td>CreativeWork</td>
-              <td>76.36</td>
             </tr>
             <tr>
               <td>MusicRecording</td>
               <td>92.59</td>
               <td>MusicAlbum</td>
               <td>74.07</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <table class="tg">
+          <caption>Table X: Schema Type result for CPA</caption>
+          <thead>
+            <tr>
+                <th class="tg-ixdq" colspan="2">Top 5</th>
+                <th class="tg-ixdq" colspan="2">Lowest 5</th>
+            </tr>
+            <tr>
+              <th class="tg-mkpc">Label</th>
+              <th class="tg-mkpc">Overall F1</th>
+              <th class="tg-mkpc">Label</th>
+              <th class="tg-mkpc">Overall F1</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Restaurant</td>
+              <td>96.25</td>
+              <td>SportsEvent</td>
+              <td>84.50</td>
+            </tr>
+            <tr>
+              <td>TVEpisode</td>
+              <td>96.08</td>
+              <td>Recipe</td>
+              <td>82.25</td>
+            </tr>
+            <tr>
+              <td>MusicRecording</td>
+              <td>94.64</td>
+              <td>Person</td>
+              <td>81.24</td>
+            </tr>
+            <tr>
+              <td>Place</td>
+              <td>93.18</td>
+              <td>CreativeWork</td>
+              <td>76.36</td>
+            </tr>
+            <tr>
               <td>LocalBusiness</td>
               <td>90.04</td>
               <td>Product</td>
@@ -3203,12 +3221,24 @@
       </table>
       <figure>
         <img src="images/example_bad_tables.png" alt="example_bad_tables" width="70%">
-        <figcaption><b><a id="Fig1"></a>Figure x:</b> Example of Bad tables.</figcaption>
+        <figcaption><b><a id="Fig1"></a>Figure x: </b>Example of bad tables</figcaption>
       </figure>
 
       <figure>
         <img src="images/example_lack_info.png" alt="example_lack_info" width="70%">
-        <figcaption><b><a id="Fig1"></a>Figure y:</b> Example of Lack of information.</figcaption>
+        <figcaption><b><a id="Fig1"></a>Figure y: </b>Example of Lack of information</figcaption>
+      </figure>
+      <p>
+        The distribution of error types in the samples are illustrated in the <i>figure X</i>.
+        In addition to the absolute count of errors,
+        we also aim to investigate the relative frequencies of errors and correct predictions, 
+        in order to gain a better understanding of the overall performance. 
+        Therefore, we seek to compare the ratio of incorrect predictions to correct predictions.
+      </p>
+      <figure>
+        <img src="images/Percentage of Error Type in CTA sample.png" alt="percentage of CTA error type" width="45%">
+        <img src="images/Percentage of Error Type in CPA sample.png" alt="percentage of CPA error type" width="45%">
+        <figcaption><b><a id=""></a>Figure x:</b> CTA & CPA error types distribution in samples.</figcaption>
       </figure>
 
       <span id="toc6"></span>
